Update request body for HostStatus
