# central/api/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.yaml
-#   timestamp: 2024-02-06T19:53:04+00:00
+#   timestamp: 2024-06-23T09:30:08+00:00
 
 from __future__ import annotations
 
@@ -12,10 +12,9 @@ from uuid import UUID
 
 
 class HostStatus(BaseModel):
-    uptime: str = Field(
-        ..., description='The amount of time the system has been running.'
+    ipv4Public: IPv4Address = Field(
+        ..., description='External IPv4 address for the host.'
     )
-    ip: IPv4Address = Field(..., description='External IPv4 address for the host.')
 
 
 class NotifDeliverySvc(Enum):
